small text changes

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 </head>
 <body>
     <div id="controls">
-        <h2>Chladni Pattern Controls</h2>
+        <h2>Controls</h2>
         <div class="slider-container">
             <label for="numberOfParticles">Number of Particles:</label>
             <input type="range" id="numberOfParticles" min="1000" max="40000" value="20000" step="100">
