fix compatibility error

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             width: 200px;
             height: 8px;
             -webkit-appearance: none;
+            appearance: none;
             background: linear-gradient(90deg, #ff00ff, #00ffff);
             border-radius: 4px;
             outline: none;
